[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"
missing_docs_in_private_items = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
google-tasks1 = "6.0.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.27.6", features = ["http2"] }
http-body-util = "0.1.3"
